{
  "version": 4,
  "terraform_version": "0.12.4",
  "serial": 33,
  "lineage": "e25330cb-254c-317e-3f3f-252433ecc5e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MicroservicesTemplateLB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bbc25e23a7640b9b",
            "arn": "arn:aws:ec2:eu-west-1:066203203749:instance/i-086dbd00ce76a53a2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-086dbd00ce76a53a2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0fbd0724aafe99c78",
            "private_dns": "ip-10-0-1-144.eu-west-1.compute.internal",
            "private_ip": "10.0.1.144",
            "public_dns": "ec2-54-154-226-134.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.154.226.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09795d0e377617014",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b5b52793116f054",
            "tags": {
              "Name": "MicroserviceTemplateLB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05436e381d708dd7f"
            ]
          },
          "depends_on": [
            "aws_security_group.LBSG",
            "aws_subnet.public-subnet-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MicroservicesTemplateWeb01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bbc25e23a7640b9b",
            "arn": "arn:aws:ec2:eu-west-1:066203203749:instance/i-006f69ce4f4f341fa",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-006f69ce4f4f341fa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-090d49d624984e8d6",
            "private_dns": "ip-10-0-1-175.eu-west-1.compute.internal",
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-54-154-70-66.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.154.70.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0be600d1a88af8ef1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b5b52793116f054",
            "tags": {
              "Name": "MicroserviceTemplateWeb01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0842072d5edc6b76c"
            ]
          },
          "depends_on": [
            "aws_security_group.WebDMZ",
            "aws_subnet.public-subnet-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-073416374ad35fe0c",
            "owner_id": "066203203749",
            "tags": {
              "Name": "MicroserviceTemplate-IGW"
            },
            "vpc_id": "vpc-0ac50a527bfa3bf70"
          },
          "depends_on": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table-A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-047766c6be0e71af5",
            "owner_id": "066203203749",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073416374ad35fe0c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MicroserviceTemplate-PublicRouteTableA"
            },
            "vpc_id": "vpc-0ac50a527bfa3bf70"
          },
          "depends_on": [
            "aws_internet_gateway.IGW",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-table-association-A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f9ddb20effc67e5",
            "route_table_id": "rtb-047766c6be0e71af5",
            "subnet_id": "subnet-00b5b52793116f054"
          },
          "depends_on": [
            "aws_route_table.public-route-table-A",
            "aws_subnet.public-subnet-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LBSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:066203203749:security-group/sg-05436e381d708dd7f",
            "description": "Allow Http access and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05436e381d708dd7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "LBSG",
            "name_prefix": null,
            "owner_id": "066203203749",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ac50a527bfa3bf70"
          },
          "depends_on": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebDMZ",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:066203203749:security-group/sg-0842072d5edc6b76c",
            "description": "Allow Backend Server access and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0842072d5edc6b76c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "WebDMZ",
            "name_prefix": null,
            "owner_id": "066203203749",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ac50a527bfa3bf70"
          },
          "depends_on": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:066203203749:subnet/subnet-00b5b52793116f054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00b5b52793116f054",
            "map_public_ip_on_launch": true,
            "owner_id": "066203203749",
            "tags": {
              "Name": "MicroserviceTemplate-public-subnet-A"
            },
            "vpc_id": "vpc-0ac50a527bfa3bf70"
          },
          "depends_on": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:066203203749:vpc/vpc-0ac50a527bfa3bf70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e20bccaea5f14e9f",
            "default_route_table_id": "rtb-09da8806c4b7c1fe6",
            "default_security_group_id": "sg-0e4c7fc50a870edda",
            "dhcp_options_id": "dopt-81f38de7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ac50a527bfa3bf70",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09da8806c4b7c1fe6",
            "owner_id": "066203203749",
            "tags": {
              "Name": "MicroserviceTemplate-VPC"
            }
          }
        }
      ]
    }
  ]
}